<resources>
    <string name="app_name" translatable="false">Walkman</string>
    <string name="permission_required">Audio permission is required to play music.</string>
    <string name="nothing_playing">Nothing playing</string>
    <string name="unknown_title">Unknown title</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="unknown_album">Unknown album</string>
    <string name="error_loading_song">Error loading: %1$s</string>
    <string name="cd_search">Search</string>
    <string name="cd_more">More options</string>
    <string name="cd_album_art">Album art</string>
    <string name="cd_favorite">Favorite</string>
    <string name="cd_previous">Previous</string>
    <string name="cd_play">Play</string>
    <string name="cd_pause">Pause</string>
    <string name="cd_next">Next</string>
    <string name="select_track">Select track</string>
    <string name="no_songs_found">No songs found on device.</string>
    <string name="close">Close</string>
    <string name="screen_library">Library</string>
    <string name="screen_home">Home</string>
    <string name="screen_queue">Queue</string>
    <string name="tab_songs">Songs</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_playlists">Playlists</string>
    <string name="screen_settings">Settings</string>
    <string name="settings_section_general">General</string>
    <string name="no_playlists">No playlists yet.</string>
    <string name="cd_open_drawer">Open navigation drawer</string>
    <string name="cd_navigate_up">Navigate up</string>
    <string name="cd_shuffle">Shuffle</string>
    <string name="cd_repeat">Change repeat mode</string>
    <string name="cd_queue">Open queue</string>
    <string name="play_all">Play all</string>
    <string name="shuffle">Shuffle</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="playlist_empty">This playlist has no songs yet.</string>
    <string name="new_playlist">New playlist</string>
    <string name="create_playlist">Create playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="delete_song">Delete song</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="delete_song_message">"Delete \"%1$s\"? It will be permanently removed from your device."</string>
    <string name="delete_song_confirm">Delete</string>
    <string name="edit_metadata">Edit</string>
    <string name="edit_metadata_title">Edit song info</string>
    <string name="field_title">Title</string>
    <string name="field_artist">Artist</string>
    <string name="field_album">Album</string>
    <string name="save">Save</string>
    <string name="change_cover">Change cover</string>
    <string name="restore_album_cover">Restore original</string>
    <string name="edit_cover_note">The cover is stored inside Walkman and will be shown in the app. Other players won\'t see it.</string>
    <string name="cd_playback_options">Playback options</string>
    <string name="player_view_cassette">Cassette</string>
    <string name="no_queue">Queue is empty. Play something from your library.</string>
    <string name="format_songs">%d songs</string>
    <string name="format_albums">%d albums</string>
    <string name="menu_artist">Artist</string>
    <string name="menu_album">Album</string>
    <string name="home_greeting">Welcome back</string>
    <string name="home_listen_next">Listen next</string>
    <string name="home_queue">Play queue</string>
    <string name="home_new_releases">New releases</string>
    <string name="home_top_songs">Top songs</string>
    <string name="home_featured_artists">Featured artists</string>
    <string name="home_no_albums">No albums yet.</string>
    <string name="home_no_artists">No artists yet.</string>
    <string name="home_recent">Recently played</string>
    <string name="home_favorites">Favorites</string>
    <string name="no_favorites">No favorite songs yet.</string>
    <string name="settings_music_folder">Music folder</string>
    <string name="settings_music_folder_desc">Only play songs from this folder, including subfolders.</string>
    <string name="settings_all_music">All music</string>
    <string name="settings_choose_folder">Choose folder</string>
    <string name="settings_add_folder">Add folder</string>
    <string name="settings_remove_folder">Remove folder</string>
    <string name="cd_remove_folder">Remove folder</string>
    <string name="setup_title">Welcome to Walkman</string>
    <string name="setup_description">Choose the folder where your music lives. Walkman will only play songs from that folder, including its subfolders.</string>
    <string name="setup_hint">You can change it later in Settings.</string>
    <string name="screen_search">Search</string>
    <string name="search_hint">Search songs or albums</string>
    <string name="search_no_results">No results found</string>
    <string name="search_show_more_songs">Show more songs</string>
    <string name="search_show_less">Show less</string>
    <string name="widget_placeholder_title">Walkman</string>
    <string name="widget_cover_description">Now playing album art</string>
    <string name="widget_play">Play</string>
    <string name="widget_pause">Pause</string>
    <string name="widget_buffering">Buffering</string>
    <string name="widget_prev">Previous</string>
    <string name="widget_next">Next</string>
    <string name="widget_description">Mini player widget showing the current song with playback controls.</string>
</resources>
