<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background">

    <ImageView
        android:id="@+id/widget_cover"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@drawable/widget_cover_bg"
        android:contentDescription="@string/widget_cover_description"
        android:scaleType="centerCrop"
        android:src="@drawable/widget_note_placeholder" />

    <LinearLayout
        android:id="@+id/widget_content_area"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_above="@id/widget_progress"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/widget_cover"
        android:layout_marginEnd="6dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/widget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/widget_placeholder_title"
            android:textColor="#FFFFFFFF"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widget_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:singleLine="true"
            android:text=""
            android:textColor="#CCFFFFFF"
            android:textSize="10sp" />

        <LinearLayout
            android:id="@+id/widget_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical">

                <ImageButton
                    android:id="@+id/widget_prev"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/widget_control_button_bg"
                    android:contentDescription="@string/widget_prev"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/widget_icon_prev" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/widget_play_pause"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/widget_play_button_bg"
                android:contentDescription="@string/widget_play"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/widget_icon_play" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|center_vertical">

                <ImageButton
                    android:id="@+id/widget_next"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/widget_control_button_bg"
                    android:contentDescription="@string/widget_next"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/widget_icon_next" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/widget_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2.5dp"
        android:layout_alignParentBottom="true"
        android:maxHeight="2.5dp"
        android:max="1000"
        android:progress="0"
        android:progressDrawable="@drawable/widget_progress_track" />
</RelativeLayout>